--- a/src/components/Box/box.module.css
+++ b/src/components/Box/box.module.css
@@ -1,9 +1,21 @@
 .box {
   display: flex;
   flex-direction: column;
-  gap: var(--gap, 1.6rem);
-  padding: var(--padding, 1.6rem);
-  border-radius: var(--borderRadius, 0.8rem);
+  gap: var(--gap, 1rem);
+  padding: var(--padding, 1rem);
+  border-radius: var(--borderRadius, 0.5rem);
   background: var(--white, #ffffff);
   box-shadow: 0 0 10px 0 rgba(50, 50, 50, 0.2);
+}
+
+.row {
+  display: flex;
+  gap: var(--gap, 1rem);
+}
+
+@media only screen and (max-width: 360px) {
+  .box-module_row__T2aQb {
+    flex-direction: column;
+    justify-content: center;
+  }
 }
