--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,4 +1,162 @@
-.button{
-  background-color: black;
-  color: aliceblue;
+/* Deafault Style*/
+.button {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  gap: var(--gap);
+  border: none;
+  font-size: var(--size-400);
+  border-radius: var(--borderRadius);
+  padding: 10px 16px;
+  transition: all .4s;
+}
+
+.button:hover {
+  cursor: pointer;
+  filter: brightness(.9);
+}
+
+/* Shadow Style*/
+.button--shadow {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  gap: var(--gap);
+  border: none;
+  font-size: var(--size-400);
+  border-radius: var(--borderRadius);
+  padding: 10px 16px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+  transition: all .4s;
+}
+
+.button--shadow::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8%;
+  background: rgba(0, 0, 0, .2);
+}
+
+.button--shadow:hover {
+  cursor: pointer;
+  filter: brightness(1.1);
+}
+
+
+/* Primary*/
+.button-primary {
+  background: var(--primary);
+  color: var(--white);
+}
+
+/* Secondary*/
+.button-secondary {
+  background: var(--secondary);
+  color: var(--white);
+  font-weight: 500;
+}
+
+/* Accent*/
+.button-accent {
+  background: var(--accent);
+  color: var(--white);
+}
+
+/* Success*/
+.button-success {
+  background: var(--success, #689F38);
+  color: var(--white);
+}
+
+/* Warning*/
+.button-warning {
+  background: var(--warning, #FBC02D);
+  color: #222222;
+}
+
+/* Error*/
+.button-error {
+  background: var(--error, #D32F2F);
+  color: var(--white);
+}
+
+/* Primary Inverted*/
+.button-primary--inverted {
+  background: transparent;
+  color: var(--primary);
+  border: 2px solid var(--primary);
+  font-weight: 500;
+}
+
+.button-primary--inverted:hover {
+  background: var(--primary);
+  color: var(--white);
+}
+
+/* Seconday inverted*/
+.button-secondary--inverted {
+  background: transparent;
+  color: var(--secondary);
+  border: 2px solid var(--secondary);
+  font-weight: 500;
+}
+
+.button-secondary--inverted:hover {
+  background: var(--secondary);
+  color: var(--white);
+}
+
+/* Accent Inverted*/
+.button-accent--inverted {
+  background: transparent;
+  color: var(--accent);
+  border: 2px solid var(--accent);
+  font-weight: 500;
+}
+
+.button-accent--inverted:hover {
+  background: var(--accent);
+  color: var(--white);
+}
+
+/* Success Inverted*/
+.button-success--inverted {
+  background: transparent;
+  color: var(--success, #689F38);
+  border: 2px solid var(--success, #689F38);
+  font-weight: 500;
+}
+
+.button-success--inverted:hover {
+  background: var(--success, #689F38);
+  color: var(--white);
+}
+
+/* Warning Inverted*/
+.button-warning--inverted {
+  background: transparent;
+  color: var(--warning, #FBC02D);
+  border: 2px solid var(--warning, #FBC02D);
+  font-weight: 500;
+}
+
+.button-warning--inverted:hover {
+  background: var(--warning, #FBC02D);
+  color: var(--white);
+}
+
+/* Warning Error*/
+.button-error--inverted {
+  background: transparent;
+  color: var(--error, #D32F2F);
+  border: 2px solid var(--error, #D32F2F);
+  font-weight: 500;
+}
+
+.button-error--inverted:hover {
+  background: var(--error, #D32F2F);
+  color: var(--white);
 }
