--- a/src/components/Box/box.module.css
+++ b/src/components/Box/box.module.css
@@ -5,7 +5,8 @@
   padding: var(--padding, 1rem);
   border-radius: var(--borderRadius, 0.5rem);
   background: var(--white, #ffffff);
-  box-shadow: 0 0 10px 0 rgba(50, 50, 50, 0.2);
+  /* box-shadow: 0 0 10px 0 rgba(50, 50, 50, 0.2);*/
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
 }
 
 .column {
