--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,5 +1,7 @@
 /* Deafault Style*/
 .button {
+  display: flex;
+  align-items: center;
   position: relative;
   overflow: hidden;
   display: flex;
@@ -18,6 +20,8 @@
 
 /* Shadow Style*/
 .button--shadow {
+  display: flex;
+  align-items: center;
   position: relative;
   overflow: hidden;
   display: flex;
@@ -159,4 +163,8 @@
 .button-error--inverted:hover {
   background: var(--error, #D32F2F);
   color: var(--white);
+}
+
+.button-border--none {
+  border: none !important;
 }
