--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -7,7 +7,7 @@
   display: flex;
   gap: var(--gap);
   border: none;
-  font-size: var(--size-400);
+  /*font-size: var(--size-400);*/
   border-radius: var(--borderRadius);
   padding: 10px 16px;
   transition: all .4s;
@@ -27,7 +27,7 @@
   display: flex;
   gap: var(--gap);
   border: none;
-  font-size: var(--size-400);
+  /*font-size: var(--size-400);*/
   border-radius: var(--borderRadius);
   padding: 10px 16px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
