--- a/src/components/Input/input.module.css
+++ b/src/components/Input/input.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: flex-end;
   flex: 1;
-  gap: .5rem;
+  gap: 1rem;
   width: 100%;
   max-width: 450px;
 }
@@ -11,7 +11,7 @@
 .input {
   width: 100%;
   border: solid 1px var(--lightGray);
-  padding: 0.5rem 1rem;
+  padding: 1rem;
   border-radius: var(--borderRadius);
   color: var(--black);
   background: var(--white);
