--- a/src/components/Hr/Hr.module.scss
+++ b/src/components/Hr/Hr.module.scss
@@ -7,3 +7,7 @@
   background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
   background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
 }
+
+.Hr--minimal {
+  margin: 1.6rem 0 !important;
+}
