--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -1,68 +1,90 @@
-.tabs-body {
-  border-radius: var(--border-radius);
-  overflow: hidden;
+.wrapper {
+  display: flex;
+  width: 100%;
+  padding: 10px 0;
+  border-radius: 4px;
 }
 
 .tabs {
-  display: flex;
-  align-items: end;
-  cursor: pointer;
-  z-index: 1;
-}
-
-.tab {
-  display: flex;
-  gap: 1rem;
-  padding: 1rem;
-}
-
-.inactive-tab {
-  /*border: 1px solid var(--lightGray);*/
-  border-bottom: 1px solid var(--lightGray);
-  /*border-left: 0;*/
-  /*background-color: #e8e8e8;*/
-  font-weight: 300;
-  border-radius: 1rem 3rem 0 0;
-}
-
-/*.tab:first-of-type,*/
-.active-tab:first-of-type {
-  border-left: 1px solid var(--lightGray);
-}
-
-.active-tab {
-  border-top: 1px solid var(--lightGray);
-  border-right: 1px solid var(--lightGray);
-  border-left: 1px solid var(--lightGray);
-  background-color: var(--white);
-  font-weight: 500;
-  border-radius: 1rem 3rem 0 0;
-}
-
-.inactive-tab span:hover {
-  font-weight: 600 !important;
-}
-
-.tabs-content {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--white);
-  padding: 1.6rem;
-  border-left: 1px solid var(--lightGray);
-  border-bottom: 1px solid var(--lightGray);
-  border-right: 1px solid var(--lightGray);
+  width: 100%;
 }
 
-.tabs-content::before {
-  content: '';
+.icon {
+  pointer-events: none;
+}
+
+.tab-header {
+  position: relative;
+  height: 60px;
+  display: flex;
+  align-items: flex-end;
+  gap: 4rem;
+
+  div {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 0.8rem;
+    color: var(--gray);
+    font-weight: 500;
+    cursor: pointer;
+    outline: none;
+
+    span {
+      pointer-events: none;
+    }
+
+    svg {
+      pointer-events: none;
+      margin-bottom: -4px;
+    }
+
+    &.tab-active {
+      svg {
+        pointer-events: none;
+        color: var(--primary);
+      }
+      pointer-events: none;
+      color: var(--primary);
+    }
+  }
+}
+
+.tab-indicator {
   position: absolute;
-  height: 2px;
-  width: 100%;
-  background-color: var(--lightGray);
-  top: -1px;
-  right: 0;
-  z-index: -1;
+  width: 40px;
+  height: 5px;
+  background: var(--primary);
+  top: 70px;
+  border-radius: 5px;
+  transition: all 500ms ease-in-out;
+}
+
+.tab-body {
+  position: relative;
+  //padding: 10px 5px;
+  height: 100%;
+  top: 0;
+  overflow-x: auto;
+  overflow-y: hidden;
+
+  div {
+    position: absolute;
+    width: 98%;
+    //z-index: -1;
+    height: 100%;
+    //padding: 16px;
+    top: 20px;
+    opacity: 0;
+    transform: scale(0.9);
+    transition: opacity 500ms ease-in-out 0ms, transform 500ms ease-in-out 0ms;
+
+    &.tab-active {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
 }
